<resources>
    <string name="app_name">Covid-19</string>
    <string name="e_mail_address">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_success">Login Successfully</string>
    <string name="email_id_password_wrong">Email Id or Password is wrong</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="email_id_is_required">Email ID is required</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_should_minimum_eight_chars">Password should be with minimum 8 digits</string>
    <string name="first_name_is_required">First Name is required</string>
    <string name="last_name_is_required">Last Name is required</string>
    <string name="password_validation_error">Password is  8–15 characters long with  1 uppercase, 1 lowercase, 1 number and 1 special character</string>
    <string name="confirm_your_password">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="mobile_number_is_required">Mobile Number is required</string>
    <string name="invalid_mobile_number">Invalid Mobile Number</string>
    <string name="don_t_have_an_account">Don\'t have an account?&#160;</string>
    <string name="user_not_registered">User is not registered. Kindly register to proceed</string>
    <string name="user_already_registered">User is already registered. Kindly login to proceed.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">India</string>
    <string name="title_dashboard">WHO</string>
    <string name="title_notifications">Resources</string>
    <string name="deceased">Deceased</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="confirmed">Confirmed</string>
    <string name="state_ut">State/UT</string>
    <string name="cnfrmd">Cnfrmd</string>
    <string name="actv">Actv</string>
    <string name="rcvrd">Rcvrd</string>
    <string name="dcsd">Dcsd</string>
    <string name="india">India</string>
    <string name="check_internet_connectivity">Check your internet connectivity</string>
    <string name="title_activity_district">DistrictActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="district">District</string>
    <string name="who_int"><u>https://covid19.who.int/</u></string>
    <string name="who_rss"><u>https://www.who.int/feeds/entity/</u></string>
    <string name="link_1">Link 1</string>
    <string name="link_2">Link 2</string>

</resources>
