<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="RegisterViewModel"
            type="com.mohann.covid19.loginandregistration.RegisterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/hso_42sp"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.15"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:singleLine="true"
            android:text="@={RegisterViewModel.firstName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLine"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@null"
            android:ems="10"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_marginTop="@dimen/hso_12dp"
            android:fontFamily="sans-serif"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:singleLine="true"
            android:text="@={RegisterViewModel.lastName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFirstName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="@dimen/hso_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginTop="@dimen/hso_16dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:singleLine="true"
            android:text="@={RegisterViewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="@dimen/hso_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginTop="@dimen/hso_16dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:singleLine="true"
            android:text="@={RegisterViewModel.confirmPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtEmailAddress"
            android:layout_width="@dimen/hso_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginTop="@dimen/hso_16dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/e_mail_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="72"
            android:maxLines="1"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:singleLine="true"
            android:text="@={RegisterViewModel.eMail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword"
            android:importantForAutofill="no" />

        <EditText
            android:digits="1234567890"
            android:id="@+id/txtPhoneNo"
            android:layout_width="@dimen/hso_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginTop="@dimen/hso_16dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_white"
            android:backgroundTint="@null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/mobile_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:singleLine="true"
            android:text="@={RegisterViewModel.phoneNo}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailAddress"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hso_32dp"
            android:layout_marginTop="@dimen/hso_32dp"
            android:layout_marginEnd="@dimen/hso_32dp"
            android:background="@drawable/rectangle_orange"
            android:fontFamily="sans-serif-medium"
            android:onClick="@{(v) -> RegisterViewModel.onClick(v)}"
            android:paddingStart="@dimen/hso_24dp"
            android:paddingTop="@dimen/hso_18dp"
            android:paddingEnd="@dimen/hso_24dp"
            android:paddingBottom="@dimen/hso_18dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/hso_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

